force-app/main/default/objects/Archived_Email_Message__x/Archived_Email_Message__x.object-meta.xml
<CustomObject>
    <description>EmailMessage</description>
    <externalDataSource>Privacy_Center_Archival</externalDataSource>
    <externalName>emailmessage</externalName>
    <label>Archived Email Message</label>
    <pluralLabel>Archived Email Messages</pluralLabel>
</CustomObject>