force-app/main/default/objects/Archived_Email_Message__x/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <externalDeveloperName>activityid</externalDeveloperName>
    <label>Activity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>