force-app/main/default/objects/Archived_Email_Message__x/fields/Automation_Type__c.field-meta.xml
<CustomField>
    <fullName>Automation_Type__c</fullName>
    <externalDeveloperName>automationtype</externalDeveloperName>
    <label>Automation Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>