force-app/main/default/objects/Archived_Email_Message__x/fields/BCC_Address__c.field-meta.xml
<CustomField>
    <fullName>BCC_Address__c</fullName>
    <externalDeveloperName>bccaddress</externalDeveloperName>
    <label>BCC Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>