force-app/main/default/objects/Archived_Email_Message__x/fields/Bounced__c.field-meta.xml
<CustomField>
    <fullName>Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isbounced</externalDeveloperName>
    <label>Bounced?</label>
    <type>Checkbox</type>
</CustomField>