force-app/main/default/objects/Archived_Email_Message__x/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <externalDeveloperName>parentid</externalDeveloperName>
    <label>Case ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>