force-app/main/default/objects/Archived_Email_Message__x/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <externalDeveloperName>ccaddress</externalDeveloperName>
    <label>CC Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>