force-app/main/default/objects/Archived_Email_Message__x/fields/Client_Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Thread_ID__c</fullName>
    <externalDeveloperName>clientthreadidentifier</externalDeveloperName>
    <label>Client Thread ID</label>
    <length>765</length>
    <type>LongTextArea</type>
</CustomField>