force-app/main/default/objects/Archived_Email_Message__x/fields/Email_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_ID__c</fullName>
    <externalDeveloperName>replytoemailmessageid</externalDeveloperName>
    <label>Email Message ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>