force-app/main/default/objects/Archived_Email_Message__x/fields/Email_Message_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Name__c</fullName>
    <externalDeveloperName>name</externalDeveloperName>
    <label>Email Message Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>