force-app/main/default/objects/Archived_Email_Message__x/fields/Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_ID__c</fullName>
    <externalDeveloperName>emailtemplateid</externalDeveloperName>
    <label>Email Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>