force-app/main/default/objects/Archived_Email_Message__x/fields/First_Opened__c.field-meta.xml
<CustomField>
    <fullName>First_Opened__c</fullName>
    <externalDeveloperName>firstopeneddate</externalDeveloperName>
    <label>First Opened</label>
    <type>DateTime</type>
</CustomField>