force-app/main/default/objects/Archived_Email_Message__x/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <externalDeveloperName>validatedfromaddress</externalDeveloperName>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>