force-app/main/default/objects/Archived_Email_Message__x/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <externalDeveloperName>fromaddress</externalDeveloperName>
    <label>From Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>