force-app/main/default/objects/Archived_Email_Message__x/fields/From_ID__c.field-meta.xml
<CustomField>
    <fullName>From_ID__c</fullName>
    <externalDeveloperName>fromid</externalDeveloperName>
    <label>From ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>