force-app/main/default/objects/Archived_Email_Message__x/fields/From_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Name__c</fullName>
    <externalDeveloperName>fromname</externalDeveloperName>
    <label>From Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>