force-app/main/default/objects/Archived_Email_Message__x/fields/Has_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Has_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>hasattachment</externalDeveloperName>
    <label>Has Attachment</label>
    <type>Checkbox</type>
</CustomField>