force-app/main/default/objects/Archived_Email_Message__x/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <externalDeveloperName>headers</externalDeveloperName>
    <label>Headers</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>