force-app/main/default/objects/Archived_Email_Message__x/fields/HTML_Body__c.field-meta.xml
<CustomField>
    <fullName>HTML_Body__c</fullName>
    <externalDeveloperName>htmlbody</externalDeveloperName>
    <label>HTML Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>