force-app/main/default/objects/Archived_Email_Message__x/fields/Is_Client_Managed__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isclientmanaged</externalDeveloperName>
    <label>Is Client Managed</label>
    <type>Checkbox</type>
</CustomField>