force-app/main/default/objects/Archived_Email_Message__x/fields/Is_Externally_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Externally_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isexternallyvisible</externalDeveloperName>
    <label>Is Externally Visible</label>
    <type>Checkbox</type>
</CustomField>