force-app/main/default/objects/Archived_Email_Message__x/fields/Is_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Is_Incoming__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>incoming</externalDeveloperName>
    <label>Is Incoming</label>
    <type>Checkbox</type>
</CustomField>