force-app/main/default/objects/Archived_Email_Message__x/fields/Is_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Is_Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>istracked</externalDeveloperName>
    <label>Is Tracked</label>
    <type>Checkbox</type>
</CustomField>