force-app/main/default/objects/Archived_Email_Message__x/fields/Last_Opened__c.field-meta.xml
<CustomField>
    <fullName>Last_Opened__c</fullName>
    <externalDeveloperName>lastopeneddate</externalDeveloperName>
    <label>Last Opened</label>
    <type>DateTime</type>
</CustomField>