force-app/main/default/objects/Archived_Email_Message__x/fields/Message_Date__c.field-meta.xml
<CustomField>
    <fullName>Message_Date__c</fullName>
    <externalDeveloperName>messagedate</externalDeveloperName>
    <label>Message Date</label>
    <type>DateTime</type>
</CustomField>