force-app/main/default/objects/Archived_Email_Message__x/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <externalDeveloperName>messageidentifier</externalDeveloperName>
    <label>Message ID</label>
    <length>765</length>
    <type>LongTextArea</type>
</CustomField>