force-app/main/default/objects/Archived_Email_Message__x/fields/Related_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_To_ID__c</fullName>
    <externalDeveloperName>relatedtoid</externalDeveloperName>
    <label>Related To ID</label>
    <length>18</length>
    <referenceTargetField>Account.ID__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Archived Email Messages</relationshipLabel>
    <relationshipName>Archived_Email_Messages</relationshipName>
    <type>IndirectLookup</type>
</CustomField>