force-app/main/default/objects/Archived_Email_Message__x/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <externalDeveloperName>status</externalDeveloperName>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>