force-app/main/default/objects/Archived_Email_Message__x/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <externalDeveloperName>subject</externalDeveloperName>
    <label>Subject</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>