force-app/main/default/objects/Archived_Email_Message__x/fields/Text_Body__c.field-meta.xml
<CustomField>
    <fullName>Text_Body__c</fullName>
    <externalDeveloperName>textbody</externalDeveloperName>
    <label>Text Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>