force-app/main/default/objects/Archived_Email_Message__x/fields/Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Thread_ID__c</fullName>
    <externalDeveloperName>threadidentifier</externalDeveloperName>
    <label>Thread ID</label>
    <length>765</length>
    <type>LongTextArea</type>
</CustomField>