force-app/main/default/objects/Archived_Email_Message__x/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <externalDeveloperName>toaddress</externalDeveloperName>
    <label>To Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>