force-app/main/default/objects/Archived_Email_Message__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>Created_Date__c</columns>
    <columns>To_Address__c</columns>
    <columns>From_Address__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>